--- a/Support/templates/result.rhtml
+++ b/Support/templates/result.rhtml
@@ -1,4 +1,3 @@
-<h2><%= escape @query %></h2>
 <% if @message %>
     <p class="message"><%= @message %></p>
 <% end %>
@@ -21,7 +20,9 @@
         <% @result.rows.each do |row| %>
             <tr class="<% $row_counter += 1; if $row_counter % 2 == 0 then %>alternate<% end %>">
                 <% row.each_with_index do |col, index| %>
-                    <td <%= 'style="text-align: right"' if @fields[index][:type] == :number %>><%= format col, @fields[index][:type] %></td>
+                  <td <%= 'style="text-align: right"' if @fields[index][:type] == :number %>>
+                    <%= format col, @fields[index][:type] %>
+                  </td>
                 <% end %>
             </tr>
         <% end %>
